# AI-Scientist

./: .gitignore  BIBLIOGRAPHY_FIX_SUMMARY.md  BIBLIOGRAPHY_FIX_V2_SUMMARY.md  CHANGELOG.md  CONTENT_PROTECTION_SUMMARY.md  CUSTOM_PROMPT_FEATURE.md  FAIR_SCORING_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OSS-120B_Training_Proposal.markdown  PAPER_TYPE_FLEXIBILITY_SUMMARY.md  QUALITY_ENHANCEMENTS_INTEGRATION_COMPLETE.md  QUALITY_ENHANCEMENTS_README.md  QUICK_FIX_MISSING_REFERENCES.md  README.md  README_new.md  REFACTORING_SUMMARY.md  REVIEW_DRIVEN_ENHANCEMENTS_COMPLETE.md  config_example.json  custom_prompt_examples.py  diagram.md  document_prompts.py  document_types.py  enhanced_paper_prompt_template.txt  fix_latex_overflow.py  functions_original.txt  functions_refactored.txt  ieee_style_workflow_flag.txt  legacy_monolithic_workflow.py  main.py  modify_ag_qec.py  original_file.py  original_functions.txt  paper-artifact.tex  postprocessing_scripts_outline.txt  pyproject.toml  refactored_functions.txt  refs.bib  requirements.txt  run_pdflatex_capture.py  (+19 more)
ai/: __init__.py  chat.py
core/: __init__.py  config.py
docs/: COMPLETE_ENHANCED_WORKFLOW_CODE.md  CUSTOM_PROMPT_FEATURE.md  ENHANCED_WORKFLOW_DOCUMENTATION.md  IMPROVEMENTS_IMPLEMENTED.md  WORKFLOW_REQUIREMENTS_UPDATE.md  prompt_templates.md  refs.bib
evaluation/: __init__.py  quality.py
generation/: __init__.py  content.py
latex/: __init__.py  compiler.py
logs/: .gitkeep
performance/: __init__.py  scaling.py
pptt/: pptt.py  pptt.tex
prompts/: __init__.py  combined_ideation_draft.txt  comprehensive_review_revision.txt  experimental_rigor_prompts.py  initial_draft.txt  (+6 more)
(+351 files in other folders)
